Fix Sweep AI workflow - use valid version @main

--- a/.github/workflows/sweep.yml
+++ b/.github/workflows/sweep.yml
@@ -1,23 +1,21 @@
 name: Sweep
-
 on:
   issues:
     types: [opened, edited]
   issue_comment:
     types: [created, edited]
-  pull_request:
-    types: [opened, edited, synchronize]
 
 jobs:
   sweep:
-    name: Sweep
     runs-on: ubuntu-latest
+    name: Sweep
     permissions:
       issues: write
       pull-requests: write
       contents: write
+      actions: read
     steps:
-      - name: Sweep
-        uses: sweepai/sweep@main
-        with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+    - name: 🧹 Sweep
+      uses: sweepai/sweep@main
+      with:
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
