--- a/.github/workflows/sweep.yml
+++ b/.github/workflows/sweep.yml
@@ -17,7 +17,7 @@ jobs:
       actions: read
     steps:
     - name: 🧹 Sweep
-      uses: sweepai/sweep@v1.0.0
+      uses: sweepai/sweep@latest
       timeout-minutes: 8
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
